--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,10 +11,9 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:theme="@style/Theme.MovieProApp"
-        tools:targetApi="31">
+        android:theme="@style/Theme.MovieProApp">
         <activity
-            android:name=".MovieActivity"
+            android:name=".view.MovieActivity"
             android:exported="false" />
         <activity
             android:name=".MainActivity"
